; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_kobjects.c_report_char_chartab_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_kobjects.c_report_char_chartab_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@report_char_chartab_status.object_type = internal global [2 x i8*] [i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [24 x i8] c"character class entries\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"character descriptions\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"%s reset to defaults\0A\00", align 1
@.str.3 = private unnamed_addr constant [22 x i8] c" updated %d of %d %s\0A\00", align 1
@.str.4 = private unnamed_addr constant [19 x i8] c" with %d reject%s\0A\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"s\00", align 1
@.str.6 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.7 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32, i32, i32)* @report_char_chartab_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @report_char_chartab_status(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca [80 x i8], align 16
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %5
  %16 = load i32, i32* %10, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [2 x i8*], [2 x i8*]* @report_char_chartab_status.object_type, i64 0, i64 %17
  %19 = load i8*, i8** %18, align 8
  %20 = call i32 @pr_info(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i8* %19)
  br label %56

21:                                               ; preds = %5
  %22 = load i32, i32* %7, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %55

24:                                               ; preds = %21
  %25 = getelementptr inbounds [80 x i8], [80 x i8]* %12, i64 0, i64 0
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %10, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds [2 x i8*], [2 x i8*]* @report_char_chartab_status.object_type, i64 0, i64 %29
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 (i8*, i32, i8*, i32, ...) @snprintf(i8* %25, i32 80, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0), i32 %26, i32 %27, i8* %31)
  store i32 %32, i32* %11, align 4
  %33 = load i32, i32* %9, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %52

35:                                               ; preds = %24
  %36 = getelementptr inbounds [80 x i8], [80 x i8]* %12, i64 0, i64 0
  %37 = load i32, i32* %11, align 4
  %38 = sub nsw i32 %37, 1
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i8, i8* %36, i64 %39
  %41 = load i32, i32* %11, align 4
  %42 = sub nsw i32 %41, 1
  %43 = sext i32 %42 to i64
  %44 = sub i64 80, %43
  %45 = trunc i64 %44 to i32
  %46 = load i32, i32* %9, align 4
  %47 = load i32, i32* %9, align 4
  %48 = icmp sgt i32 %47, 1
  %49 = zext i1 %48 to i64
  %50 = select i1 %48, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.6, i64 0, i64 0)
  %51 = call i32 (i8*, i32, i8*, i32, ...) @snprintf(i8* %40, i32 %45, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.4, i64 0, i64 0), i32 %46, i8* %50)
  br label %52

52:                                               ; preds = %35, %24
  %53 = getelementptr inbounds [80 x i8], [80 x i8]* %12, i64 0, i64 0
  %54 = call i32 @pr_info(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.7, i64 0, i64 0), i8* %53)
  br label %55

55:                                               ; preds = %52, %21
  br label %56

56:                                               ; preds = %55, %15
  ret void
}

declare dso_local i32 @pr_info(i8*, i8*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
